# tinyHPO

./: CLAUDE.md  README.md  design.md  main.py  nn.py  pyproject.toml  requirements.txt  todo.md
examples/: mnist.py
optimizer/: hyperparamOptim.py
optimizer/bayesian/: bayesianOptim.py
src/: BO.md  __init__.py  core.py  hpo.py  search.py  strategies.py  tinyhpo.py  typedef.py  types.py
src/metaoptimizer/: hyperparamOptim.py
src/metaoptimizer/bayesian/: bayesianOptim.py
src/strategies/: __init__.py  bayesianOptim.py  bayesiansearch.py  bruteparamsearch.py  gridsearch.py  optuna.py  randomsearch.py
src/strategies/bayesian/: __init__.py  acquisition.py  bayesiansearch.py  gaussianprocess.py  kernels.py  search.py
src/utils/: gaussianProcess.py  parser.py  train.py  unpack.py  wrap.py
src/viz/: __init__.py  plots.py
tests/: test.py  test_mnist.py  test_strategies.py
tests/models/: mnist.py
tests/unit/: gp.py
